# vade

./: .gitignore  Cargo.toml  deny.toml  license.md  readme.md
examples/goatcounter/: .gitignore  app.service.j2  justfile  readme.md  vade.toml
examples/guestbook/: .gitignore  Cargo.toml  justfile  readme.md  vade.json  vade.toml
examples/guestbook/infra/: Caddyfile  app.service.j2
examples/guestbook/src/: main.rs
examples/python-no-deps/: vade.json  vade.toml
examples/static-site/: readme.md  vade.json  vade.toml
examples/timer/: readme.md  vade.toml
misc/: setup-caddy.py  setup-caddy.yml  setup-server.py  setup-server.yml
src/: app_deployment.rs  app_name.rs  application_name.rs  cli.rs  config.rs  deploy.rs  main.rs  setup.rs  templating.rs  util.rs
src/commands/: create.rs  deploy.rs  destroy.rs  mod.rs  server_setup.rs
src/config/: deserialize.rs  mod.rs  validate.rs
src/resources/: Caddyfile  default.service.j2
test-e2e/: readme.md  run_tests.sh
test-e2e/resources/: dummy.service  invalid-caddyfile-vade.toml  invalid-systemd-unit-vade.toml
test-e2e/test-vm/: cloud-init.yaml  id_ed25519  id_ed25519.pub  patch-caddy-config.py  patch-caddy-config.yml
tests/: examples.rs
tests/resources/: almost-empty.service  vade-artifacts-not-found.toml  vade-bad-toml.toml  vade-builtin-template-missing-var.toml  vade-builtin-template-not-found.toml  vade-duplicate-unit-filenames.toml  vade-file-template-missing-var.toml  vade-file-template-not-found.toml  vade-inline-template-error.toml  vade-multiple-errors.toml  vade-user-var-error.toml
(+30 files in other folders)
