[package]
name = "vade-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vade"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
rootcause = "0.11.0"
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
minijinja = { version = "2.14.0", features = ["loader"] }
