[package]
name = "vade-cli"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[[bin]]
name = "vade"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
minijinja = { version = "2.14.0", features = ["loader"] }
toml = "1.1.2"
serde_json = "1.0.150"
toml-span = "0.7.1"
miette = { version = "7.6.0", features = ["fancy"] }
